turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:12: error: not found: type COLOR
def setCouleurSol(c:COLOR) {
                    ^