turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	if (getCouleurSol() == Color.white) {
		setCouleurSol(Color.black)
		droite()
		avance()
	} else {
		setCouleurSol(Color.white)
		gauche()
		avance()
	}
}

def setCouleurSol(c:COLOR) {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
